--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="nav-section">
                 <a class="logo link" href="./index.html"><span class="logo-part-color">WEB</span>STUDIO</a>
                 <ul class="nav-list list">
-                    <li class="nav-item"><a class="nav-link link" href="./index.html">Studio</a></li>
+                    <li class="nav-item"><a class="nav-link current-page link" href="./index.html">Studio</a></li>
                     <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link link" href="">Contacts</a></li>
                 </ul>
@@ -383,7 +383,11 @@
     <!--BACKDROP-->
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button data-modal-close class="modal-btn" type="button">x</button>
+            <button data-modal-close class="modal-btn" type="button">
+            <svg  width="8px" height="8px">
+                <use href="./images/icons.svg#icon-btn-close-modal"></use>
+            </svg>    
+            </button>
         </div>
     </div>
     
