--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                 <a class="logo link" href="./index.html"><span class="logo-part-color">WEB</span>STUDIO</a>
                 <ul class="nav-list list">
                     <li class="nav-item"><a class="nav-link link" href="./index.html">Studio</a></li>
-                    <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link current-page link" href="./portfolio.html">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link link" href="">Contacts</a></li>
                 </ul>
             </nav>
